<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_134sdp"
    android:layout_gravity="center"
    android:background="@drawable/yellow_round_stroke"
    android:orientation="vertical"
 >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/top_line_medium"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/_13sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:orientation="vertical">




        <include layout="@layout/lyt_error" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txtCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Islamabad"
                    android:fontFamily="@font/font_medium"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_9sdp" />


                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:textColor="#ffff"
                    android:fontFamily="@font/font_bold"
                    android:textSize="@dimen/text_35sdp"
                    tools:text="32°c" />

            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imgWeather"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_2sdp"
                    tools:src="@drawable/_10"
                    />


                <TextView
                    android:id="@+id/txtWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:text="@string/clear_sky"
                    android:textColor="#ffff"
                    android:layout_gravity="end"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textSize="@dimen/text_10sdp"
                    android:fontFamily="@font/font_medium"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/high"
                        android:textColor="#ffff"
                        android:textSize="@dimen/text_7sdp"
                        />

                    <TextView
                        android:id="@+id/txtTempHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:textColor="#ffff"
                        android:textSize="@dimen/text_8sdp"
                        android:fontFamily="@font/font_medium"
                        tools:text="30°c" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/low"

                        android:textColor="#ffff"
                        android:textSize="@dimen/text_7sdp"
                        />

                    <TextView
                        android:id="@+id/txtLowTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:textColor="#ffff"
                        android:textSize="@dimen/text_8sdp"
                        android:fontFamily="@font/font_medium"
                        tools:text="30°c" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_9sdp"
            />


        <include layout="@layout/lyt_weather_6_hours"/>









    </LinearLayout>

</FrameLayout>